# mana-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/scripts/: build_release_notes.py  validate_release_version.py
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
.mana/: output_20260519_182644.json  output_20260519_182648.json  output_20260519_182720.json  output_20260519_182915.json  output_20260519_182916.json  output_20260519_183128.json  output_20260519_183204.json
.mana/index/: chat_memory.sqlite3
.mana/llm_logs/: 2026-05-19-mana-agent-runs.jsonl
dashboard/: app.py
dashboard/components/: cards.py
dashboard/pages/: 02_Reports.py  03_Taskboard.py
docs/: 03-quick-start.md  04-commands.md  05-configuration.md  06-workflows.md  07-diagram.md  08-architecture.md  08-tool-system.md  09-agent-behavior.md  09-mcp.md  10-error-handling.md  11-logging.md  12-testing.md  13-tool-system.md  14-release.md  15-development.md  16-email-connectors.md  17-browser-automation.md  20-codex-integration.md  21-entry-routing-and-chat-sessions.md  a2a.md  acp.md  adaptive-coding-runtime.md  custom-http-runtime-v1.md  execution-providers.md  model-routing.md  models.md  multi-agent-routing.md  protocol-gateway.md
docs/architecture/: remote-execution-fabric.md
scripts/: mana_agent_entry.py
src/mana_agent/: __init__.py
src/mana_agent/agent/: __init__.py  evaluation_gate.py  evidence_queue.py  flow.py  orchestrator.py  selection.py  task_classifier.py  task_context.py  verification.py  verification_planner.py
src/mana_agent/analysis/: models.py
src/mana_agent/api/: app.py
src/mana_agent/automations/: __init__.py  scheduler.py  self_improvement.py
src/mana_agent/background/: manager.py
src/mana_agent/chat/: __init__.py  events.py  history.py
src/mana_agent/cli/: chat_ui.py  events.py  fullscreen_chat.py  menu.py  renderers.py
src/mana_agent/coding/: __init__.py  internal_agent_shim.py  live_events.py  models.py  selection.py
src/mana_agent/commands/: browser_cli.py  chat_cli.py  chat_input.py  cli.py  cli_internal.py  email_cli.py  main_cli.py  protocols_cli.py  ui_helpers.py  worktree_cli.py
src/mana_agent/config/: session.py  settings.py  user_config.py
src/mana_agent/dashboard/: app.py
src/mana_agent/default_skills/: fastapi.md  laravel.md  nestjs.md  nextjs.md  reactjs.md
src/mana_agent/doctor/: __init__.py  models.py  redaction.py  registry.py  reporter.py  runner.py
src/mana_agent/execution/: __init__.py  artifacts.py  cleanup.py  config.py  errors.py  lifecycle.py  manager.py  models.py  provider.py  registry.py  router.py  secrets.py  snapshots.py  store.py
src/mana_agent/gateway/: __init__.py  chat_gateway.py  stack.py  turn_engine.py
src/mana_agent/llm/: agent_work_queue.py  agent_work_queue_adapters.py  ask_agent.py  auto_chat.py  coding_agent.py  coding_agent_prompt.py  evidence_memory.py  gate_command.py  mutation_plan.py  prompts.py  small_direct_edit.py  tool_worker_process.py  tools_executor.py  tools_manager.py
src/mana_agent/mcp/: __init__.py  client.py  config.py  tools.py
src/mana_agent/memory/: __init__.py  compatibility.py  config.py  contracts.py  errors.py  factory.py  models.py  service.py
src/mana_agent/model_routing/: __init__.py  competition.py  history.py  models.py  profiles.py  repository.py  router.py
src/mana_agent/observability/: __init__.py  service.py
src/mana_agent/prompting/: __init__.py  builder.py  layers.py  memory_snapshot.py  mode_rules.py  output_contract.py  repo_rules.py  skills_index.py
src/mana_agent/protocols/: __init__.py
src/mana_agent/search/: __init__.py  config.py  decision.py  github_provider.py  memory.py  models.py  prompts.py  providers.py  ranker.py  router.py  web_provider.py
src/mana_agent/services/: ask_service.py  chat_service.py  chat_session_history.py  coding_memory_service.py  coding_todo_service.py  conversation_service.py  execution_event_hub.py  memory_service.py  project_llm_analyze_service.py  search_service.py
src/mana_agent/skills/: manager.py
src/mana_agent/tools/: __init__.py  apply_patch.py  contracts.py  edit_file.py  repository.py  write_file.py
src/mana_agent/tui/: __init__.py  app.py  app.tcss  banner.py  configuration_app.py  forms.py  menu.py  model_picker.py  search_provider_picker.py  status.py  wizard.py
src/mana_agent/ui/: streamlit_helpers.py
src/mana_agent/utils/: tool_policy.py  tool_results.py
src/mana_agent/workspaces/: paths.py  preparation.py  service.py  store.py
src/mana_analyzer/commands/: __init__.py  analyze_cli.py  ask_cli.py  chat_cli.py  cli.py  cli_internal.py  main_cli.py  output.py  ui_helpers.py
tests/: test_a2a_protocol.py  test_acp_protocol.py  test_adaptive_coding_runtime.py  test_agent_decision_routing.py  test_agent_orchestrator.py  test_agent_work_queue.py  test_api_workspaces.py  test_apply_patch_json_only.py  test_ask_agent.py  test_ask_agent_recovery.py  test_ask_entry_router.py  test_ask_service.py  test_auto_chat.py  test_auto_chat_tools_catalog.py  test_browser_routing_config.py  test_chat.py  test_chat_console_logging.py  test_chat_direct_commands.py  test_chat_planning_mode.py  test_chat_ui_events_tokens.py  test_cli_flow.py  test_cli_modes_skills.py  test_cli_smoke.py  test_cli_ux_helpers.py  test_codex_integration.py  test_coding_agent.py  test_coding_memory_service.py  test_coding_runtime_selection_events.py  test_coding_tool_system.py  test_dashboard_helpers.py  test_dashboard_navigation.py  test_doctor.py  test_edit_file_tools.py  test_gate_command.py  test_github_provider.py  test_github_query_builder.py  test_lightweight_edit_policy.py  test_llm_compatibility.py  test_llm_logging.py  test_main_cli_session_lifecycle.py  (+30 more)
tests/connectors/: test_browser_core.py  test_email_core.py
tests/execution/: test_execution_fabric.py
tests/gateway/: test_chat_gateway.py  test_gateway_repository_preparation.py
tests/integration/: test_browser_playwright.py
(+161 files in other folders)
