[build-system]
requires = ["setuptools>=61.0,<70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mana-agent"
version = "0.0.6"
description = "LLM-powered static analysis and repository understanding tool"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }

dependencies = [
  # CLI / UX
  "typer>=0.6.0,<1.0.0",
  "rich>=12.0,<15.0",
  "prompt_toolkit>=3.0,<4.0",

  # Config / validation
  "pydantic>=2.0,<3.0",
  "pydantic-settings>=2.0,<3.0",
  "python-dotenv>=1.0,<3.0",

  # ✅ LangChain (modern, supported)
  "langchain>=0.3.27,<1.0.0",
  "langchain-community>=0.0.10,<1.0.0",
  "langchain-openai>=0.3.27,<1.0.0",

  # OpenAI SDK (still required by langchain-openai)
  "openai>=0.27.0,<2.0.0",

  # Vector store
  "faiss-cpu>=1.7.3,<2.0.0",

  # Analysis / security
  "safety>=2.0,<3.0",

  # Background jobs / cache
  "redis>=4.5.0,<5.0.0",
  "rq>=1.10.0,<2.0.0",

  # Retry utils
  "tenacity>=8.0.0,<9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
mana-agent = "mana_agent.commands.cli:app"
