[build-system]
requires = ["setuptools>=61.0,<70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mana-agent"
version = "0.0.17"
description = "LLM-powered static analysis and repository understanding tool"
readme = "README.md"
requires-python = ">=3.10,<=3.14.6"  # Support up to Python 3.14.6; some langchain/pydantic stacks may have warnings on 3.14+ (see CHANGELOG)
license = { text = "MIT" }

dependencies = [
  # CLI / UX
  "typer>=0.6.0,<1.0.0",
  "rich>=12.0,<15.0",
  "textual>=0.80.0,<1.0.0",
  "prompt_toolkit>=3.0,<4.0",
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.27,<1.0",
  "python-multipart>=0.0.9,<1.0",

  # Config / validation
  "pydantic>=2.0,<3.0",
  "pydantic-settings>=2.0,<3.0",
  "python-dotenv>=1.0,<3.0",
  "PyYAML>=6.0,<7.0",
  "mcp>=1.0,<2.0",

  # ✅ LangChain (modern, supported)
  "langchain>=0.3.50,<1.0.0",
  "langchain-community>=0.0.20,<1.0.0",
  "langchain-openai>=0.3.50,<1.0.0",

  # OpenAI SDK (still required by langchain-openai)
  "openai>=0.27.0,<2.0.0",

  # Vector store
  "faiss-cpu>=1.7.3,<2.0.0",

  # Analysis / security
  "safety>=2.0,<3.0",
  "python-docx>=1.1,<2.0",
  "openpyxl>=3.1,<4.0",
  "pypdf>=4.0,<7.0",

  # Background jobs / cache
  "redis>=4.5.0,<5.0.0",
  "rq>=1.10.0,<2.0.0",

  # Retry utils
  "tenacity>=8.0.0,<9.0.0",
  "cryptography>=42.0,<46.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
browser = ["playwright>=1.45,<2.0"]
mem0 = ["mem0ai>=2.0,<3.0", "keyring>=24.0,<26.0"]
acp = ["agent-client-protocol>=0.11,<0.12"]
a2a = ["a2a-sdk[http-server]>=1.1,<2.0"]
protocols = [
  "agent-client-protocol>=0.11,<0.12",
  "a2a-sdk[http-server]>=1.1,<2.0",
]
execution-kubernetes = ["kubernetes>=30,<35"]
execution-modal = ["modal>=0.64,<2"]
execution = ["kubernetes>=30,<35", "modal>=0.64,<2"]

# Grok Build: optional dashboard + automations extras (Phase 1)
# These keep the core CLI + multi-agent runtime dependency-free.
# Install examples:
#   pip install "mana-agent[dashboard]"
#   pip install "mana-agent[automations]"
#   pip install "mana-agent[full]"
dashboard = [
  "streamlit>=1.38,<2.0",
  "plotly>=5.22,<6",
  "pandas>=2.2,<3",
]
automations = [
  "apscheduler>=3.10,<4",
]
observability = [
  "opentelemetry-sdk>=1.27,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
]
email = ["google-api-python-client>=2.0,<3.0", "google-auth-oauthlib>=1.2,<2.0", "keyring>=24.0,<26.0"]
full = [
  "playwright>=1.45,<2.0",
  "streamlit>=1.38,<2.0",
  "plotly>=5.22,<6",
  "pandas>=2.2,<3",
  "apscheduler>=3.10,<4",
  "opentelemetry-sdk>=1.27,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
  "google-api-python-client>=2.0,<3.0",
  "google-auth-oauthlib>=1.2,<2.0",
  "keyring>=24.0,<26.0",
  "mem0ai>=2.0,<3.0",
  "agent-client-protocol>=0.11,<0.12",
  "a2a-sdk[http-server]>=1.1,<2.0"
]

[project.scripts]
mana-agent = "mana_agent.commands.cli:app"

[tool.setuptools.package-data]
mana_agent = ["default_skills/*.md", "builtin_skills/skill_creator/SKILL.md", "tui/app.tcss"]
